the-project/gke-manifests/tododb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tododb
spec:
  serviceName: tododb
  replicas: 1
  selector:
    matchLabels:
      app: tododb
  template:
    metadata:
      labels:
        app: tododb
    spec:
      containers:
        - name: tododb
          image: postgres:16-alpine
          resources:
            requests:
              cpu: 75m
              memory: 160Mi
            limits:
              cpu: 400m
              memory: 384Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tododb-svc
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: tododb
